force-app/main/default/objects/AI_Product_Rule__c/AI_Product_Rule__c.object-meta.xml
<CustomObject>
    <description>Defines product constraints including dependencies (auto-add), exclusions (mutually exclusive), and bundle configurations. Evaluated by the AI engine to ensure quote product validity.</description>
    <label>AI Product Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Product Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>