force-app/main/default/objects/AI_Product_Rule__c/fields/Bundle_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Discount_Percent__c</fullName>
    <description>Discount percentage applied when all bundle products are present. Only applicable for Bundle rule type.</description>
    <label>Bundle Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>