force-app/main/default/objects/AI_Product_Rule__c/fields/Primary_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product_Code__c</fullName>
    <description>The triggering product code. When this product is added to a quote, the rule is evaluated.</description>
    <label>Primary Product Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>