force-app/main/default/objects/AI_Product_Rule__c/fields/Related_Product_Codes__c.field-meta.xml
<CustomField>
    <fullName>Related_Product_Codes__c</fullName>
    <description>Comma-separated product codes affected by this rule. For Dependency: codes to auto-add. For Exclusion: codes that cannot coexist. For Bundle: codes included in the bundle.</description>
    <label>Related Product Codes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>