force-app/main/default/objects/AI_Product_Rule__c/fields/Rule_Text__c.field-meta.xml
<CustomField>
    <fullName>Rule_Text__c</fullName>
    <description>Full structured natural language description of the product rule. Used by the LLM to understand and enforce product constraints.</description>
    <label>Rule Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>