force-app/main/default/objects/AI_Product_Rule__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <description>Type of product rule. Dependency = auto-add required products. Exclusion = mutually exclusive. Bundle = group at discount. Validation = prevent invalid configs.</description>
    <label>Rule Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Dependency</fullName><default>false</default><label>Dependency (Auto-Add)</label></value>
            <value><fullName>Exclusion</fullName><default>false</default><label>Exclusion (Mutually Exclusive)</label></value>
            <value><fullName>Bundle</fullName><default>false</default><label>Bundle (Group Discount)</label></value>
            <value><fullName>Validation</fullName><default>false</default><label>Validation (Block Invalid)</label></value>
            <value><fullName>Recommendation</fullName><default>false</default><label>Recommendation (Suggest)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>